fix alignment of button label in OSX

--- a/chrome/skin/mac/TabView.css
+++ b/chrome/skin/mac/TabView.css
@@ -41,3 +41,8 @@
 	max-width: 18px;
 	margin: 0;
 }
+
+/* Tweak needed so the button label adapts to an appropriate height. */
+#tabGroups-tabview-button .toolbarbutton-text {
+	max-height: 1em;
+}
